tests/ui/const-generics/issues/issue-67375.full.stderr
error: overly complex generic constant
  --> $DIR/issue-67375.rs:7:17
   |
LL |     inner: [(); { [|_: &T| {}; 0].len() }],
   |                 ^^---------------^^^^^^^^
   |                   |
   |                   pointer casts are not allowed in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function

error: aborting due to 1 previous error

